vendor module